fixed index.js file, YESgit add -A

--- a/gen_html/index.html
+++ b/gen_html/index.html
@@ -21,17 +21,17 @@
     <div class="row align-items-start">
         <section class="row justify-content-around">
 
-        <div>
+        
         <div class="col-12 col-sm-6 col-lg-4 mt-0 p-0">
             <div class="card mx-auto" style="width: 24rem;">
                 <div class="card-body">
-                    <h5 class="card-title">ljsd</h5>
+                    <h5 class="card-title">Scotty</h5>
                     <h6 class="job-title">Manager</h6>
                     <div class="card w-98">
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item">ID#: klfsd</li>
-                            <li class="list-group-item">Email: <a href="email:klfsjl">klfsjl</a></li>
-                            <li class="list-group-item">Manager office: klsf</a></li>
+                            <li class="list-group-item">ID#: 1</li>
+                            <li class="list-group-item">Email: <a href="email:s@gmail.com">s@gmail.com</a></li>
+                            <li class="list-group-item">Manager office: 1</a></li>
                         </ul>
                     </div>
                 </div>
@@ -40,19 +40,34 @@
         <div class="col-12 col-sm-6 col-lg-4 mt-0 p-0">
             <div class="card mx-auto" style="width: 24rem;">
                 <div class="card-body">
-                    <h5 class="card-title">klsjdf</h5>
-                    <h6 class="job-title">Intern</h6>
+                    <h5 class="card-title">Candace</h5>
+                    <h6 class="job-title">Engineer</h6>
                     <div class="card w-98">
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item">ID#: skljfs</li>
-                            <li class="list-group-item">Email: <a href="email:undefined">undefined</a>
-                            </li>
-                            <li class="list-group-item">GitHub: undefined</li>
+                            <li class="list-group-item">ID#: 2</li>
+                            <li class="list-group-item">Email: <a href="email:c@gmail.com">c@gmail.com</a></li>
+                            <li class="list-group-item">GitHub: 2</li>
                         </ul>
                     </div>
                 </div>
             </div>
-        </div></div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-4 mt-0 p-0">
+            <div class="card mx-auto" style="width: 24rem;">
+                <div class="card-body">
+                    <h5 class="card-title">nick</h5>
+                    <h6 class="job-title">Intern</h6>
+                    <div class="card w-98">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">ID#: 9</li>
+                            <li class="list-group-item">Email: <a href="email:n@gmail.com">n@gmail.com</a>
+                            </li>
+                            <li class="list-group-item">GitHub: CSUN</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         </section>
     </div>
