--- a/gen_html/index.html
+++ b/gen_html/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <header class="mb-5">
+    <header class="mb-2">
         <h1 class="main-header">My Team</h1>
     </header>
 
@@ -22,47 +22,93 @@
         <section class="row justify-content-around">
 
         
-        <div class="col-12 col-sm-6 col-lg-4 mt-0 p-0">
-            <div class="card mx-auto" style="width: 24rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Scotty</h5>
-                    <h6 class="job-title">Manager</h6>
-                    <div class="card w-98">
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">ID#: 1</li>
-                            <li class="list-group-item">Email: <a href="email:s@gmail.com">s@gmail.com</a></li>
-                            <li class="list-group-item">Manager office: 1</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-4 mt-0 p-0">
-            <div class="card mx-auto" style="width: 24rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Candace</h5>
-                    <h6 class="job-title">Engineer</h6>
-                    <div class="card w-98">
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">ID#: 2</li>
-                            <li class="list-group-item">Email: <a href="email:c@gmail.com">c@gmail.com</a></li>
-                            <li class="list-group-item">GitHub: 2</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-4 mt-0 p-0">
+        <div class="col-12 col-sm-6 col-lg-4 mt-5 p-0">
             <div class="card mx-auto" style="width: 24rem;">
                 <div class="card-body">
                     <h5 class="card-title">nick</h5>
+                    <h6 class="job-title">Manager</h6>
+                    <div class="card w-98">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">ID#: 123</li>
+                            <li class="list-group-item">Email: <a href="n@gmail">n@gmail</a></li>
+                            <li class="list-group-item">Manager office: 123</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-4 mt-5 p-0">
+            <div class="card mx-auto" style="width: 24rem;">
+                <div class="card-body">
+                    <h5 class="card-title">jill</h5>
+                    <h6 class="job-title">Engineer</h6>
+                    <div class="card w-98">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">ID#: 234</li>
+                            <li class="list-group-item">Email: <a href="j@gmail.com">j@gmail.com</a></li>
+                            <li class="list-group-item">GitHub: j_scott</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-4 mt-5 p-0">
+            <div class="card mx-auto" style="width: 24rem;">
+                <div class="card-body">
+                    <h5 class="card-title">ruth</h5>
                     <h6 class="job-title">Intern</h6>
                     <div class="card w-98">
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item">ID#: 9</li>
-                            <li class="list-group-item">Email: <a href="email:n@gmail.com">n@gmail.com</a>
+                            <li class="list-group-item">ID#: 345</li>
+                            <li class="list-group-item">Email: <a href="r@gmail.com">r@gmail.com</a>
                             </li>
-                            <li class="list-group-item">GitHub: CSUN</li>
+                            <li class="list-group-item">School: UCLA</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-4 mt-5 p-0">
+            <div class="card mx-auto" style="width: 24rem;">
+                <div class="card-body">
+                    <h5 class="card-title">kljdf</h5>
+                    <h6 class="job-title">Engineer</h6>
+                    <div class="card w-98">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">ID#: skjfls</li>
+                            <li class="list-group-item">Email: <a href="jksdjf">jksdjf</a></li>
+                            <li class="list-group-item">GitHub: jkljf</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-4 mt-5 p-0">
+            <div class="card mx-auto" style="width: 24rem;">
+                <div class="card-body">
+                    <h5 class="card-title">lsjfjs</h5>
+                    <h6 class="job-title">Intern</h6>
+                    <div class="card w-98">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">ID#: kljfs</li>
+                            <li class="list-group-item">Email: <a href="kjslf">kjslf</a>
+                            </li>
+                            <li class="list-group-item">School: kljdsf</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-4 mt-5 p-0">
+            <div class="card mx-auto" style="width: 24rem;">
+                <div class="card-body">
+                    <h5 class="card-title">jlksf</h5>
+                    <h6 class="job-title">Engineer</h6>
+                    <div class="card w-98">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">ID#: jkldsjf</li>
+                            <li class="list-group-item">Email: <a href="klsf">klsf</a></li>
+                            <li class="list-group-item">GitHub: klds</li>
                         </ul>
                     </div>
                 </div>
